--- a/games/index.html
+++ b/games/index.html
@@ -193,39 +193,39 @@
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team A</td>
-	<td>Team B</td>
+	<td>Navy</td>
+	<td>Green</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team C</td>
-	<td>Team D</td>
+	<td>Light Blue</td>
+	<td>Grey</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 	<td style="padding-left: 1em;" colspan="3">12 April</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team A</td>
-	<td>Team B</td>
+	<td>Green</td>
+	<td>Light Blue</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team C</td>
-	<td>Team D</td>
+	<td>Navy</td>
+	<td>Grey</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 	<td style="padding-left: 1em;" colspan="3">19 April</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team A</td>
-	<td>Team B</td>
+	<td>Navy</td>
+	<td>Light Blue</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team C</td>
-	<td>Team D</td>
+	<td>Grey</td>
+	<td>Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 	<td style="padding-left: 1em;" colspan="3">26 April</td>
@@ -238,52 +238,52 @@
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+<td>Light Blue</td>
+<td>Grey</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+<td>Navy</td>
+<td>Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">10 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+<td>Green</td>
+<td>Grey</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+<td>Navy</td>
+<td>Light Blue</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">17 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+<td>Grey</td>
+<td>Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+<td>Light Blue</td>
+<td>Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">24 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+<td>Light Blue</td>
+<td>Grey</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+<td>Navy</td>
+<td>Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">31 May - Championship</td>
@@ -499,9 +499,6 @@
 <td style="padding-left: 1em;">15:45</td>
 <td>Team C</td>
 <td>Team D</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">4 October</td>
