--- a/games/index.html
+++ b/games/index.html
@@ -161,12 +161,12 @@
 			<span class="tb_tab_title">Spring Season</span>
 		</div>
 		<ul class="tab-nav tf_clearfix">
-			<li class="current" aria-expanded="true">
+			<li aria-expanded="false">
 				<a href="#tab-tb_d8mj25-0">
 										<span>Spring Season</span>
 				</a>
 			</li>
-			<li aria-expanded="false">
+			<li class="current" aria-expanded="true">
 				<a href="#tab-tb_d8mj25-1">
 										<span>Summer Season</span>
 				</a>
@@ -178,7 +178,7 @@
 			</li>
 					</ul>
 
-					<div data-id="tab-tb_d8mj25-0" class="tab-content" aria-hidden="false">
+					<div data-id="tab-tb_d8mj25-0" class="tab-content" aria-hidden="true">
 				<div class="tb_text_wrap">
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
@@ -306,7 +306,7 @@
 </tbody>
 </table>				</div>
 			</div>
-					<div data-id="tab-tb_d8mj25-1" class="tab-content" aria-hidden="true">
+					<div data-id="tab-tb_d8mj25-1" class="tab-content" aria-hidden="false">
 				<div class="tb_text_wrap">
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
@@ -315,78 +315,84 @@
 		</tr>
 		<tr>
 			<td style="padding-left: 1em;">15:00</td>
-			<td>Team A</td>
-			<td>Team B</td>
+			<td>Team Grey</td>
+			<td>Team Navy</td>
 		</tr>
 		<tr>
 			<td style="padding-left: 1em;">15:45</td>
-			<td>Team C</td>
-			<td>Team D</td>
+			<td>Team Green</td>
+			<td>Team Light Blue</td>
 		</tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">21 June</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+<td>Team Grey</td>
+<td>Team Green</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+<td>Team Light Blue</td>
+<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">28 June</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+<td>Team Green</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+<td>Team Grey</td>
+<td>Team Light Blue</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">5 July</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+<td>Team Grey</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+<td>Team Green</td>
+<td>Team Light Blue</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">12 July</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+<td>Team Light Blue</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+<td>Team Grey</td>
+<td>Team Green</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">19 July</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">26 July</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+<td>Team Light Blue</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+<td>Team Grey</td>
+<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">2 August</td>
