--- a/games/index.html
+++ b/games/index.html
@@ -432,95 +432,83 @@
 				<div class="tb_text_wrap">
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
-	<tr style="background-color: #e0e0e0; font-weight: bold;">
-		<td style="padding-left: 1em;" colspan="3">23 August – Opening Day</td>
-<tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
-</tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">30 August</td>
+<td style="padding-left: 1em;" colspan="3">30 August - Opening Day</td>
 </tr>
-<tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
-</tr>
+	<tr>
+		<td style="padding-left: 1em;">15:00</td>
+		<td>Navy</td>
+		<td>Green</td>
+	</tr>
+	<tr>
+		<td style="padding-left: 1em;">15:45</td>
+		<td>Light Blue</td>
+		<td>Grey</td>
+	</tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">6 September</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Green</td>
+	<td>Light Blue</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Navy</td>
+	<td>Grey</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">13 September</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Light Blue</td>
+	<td>Grey</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Navy</td>
+	<td>Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">20 September</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Navy</td>
+	<td>Light Blue</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Grey</td>
+	<td>Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">27 September</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Green</td>
+	<td>Grey</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Navy</td>
+	<td>Light Blue</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">4 October</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team A</td>
-<td>Team B</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Grey</td>
+	<td>Navy</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team C</td>
-<td>Team D</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Light Blue</td>
+	<td>Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">11 October</td>
