--- a/games/index.html
+++ b/games/index.html
@@ -475,14 +475,7 @@
 <td style="padding-left: 1em;" colspan="3">20 September</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Navy</td>
-	<td>Light Blue</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Grey</td>
-	<td>Green</td>
+	<td style="padding-left: 1em;" colspan="3">Cancelled due to rain</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">27 September</td>
@@ -514,7 +507,14 @@
 <td style="padding-left: 1em;" colspan="3">11 October</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;" colspan="3">BYE Week</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Navy</td>
+	<td>Light Blue</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Grey</td>
+	<td>Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">18 October - Championship</td>
