--- a/games/index.html
+++ b/games/index.html
@@ -520,17 +520,17 @@
 <td style="padding-left: 1em;" colspan="3">18 October - Championship</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">14:15</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+	<td style="padding-left: 1em;">14:00</td>
+	<td>Grey</td>
+	<td>Light Blue</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:15</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Navy</td>
+	<td>Green</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">16:15</td>
+	<td style="padding-left: 1em;">16:00</td>
 	<td>Winner Game 1</td>
 	<td>Winner Game 2</td>
 </tr>
@@ -575,30 +575,30 @@
 <thead>
 <tr style="background-color: #D9183B; color: #FFFFFF;">
 <th style="padding-left: 1em;">Team</th>
-<th>G</th>
-<th>P</th>
+<th>Games</th>
+<th>Points</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="padding-left: 1em;">Green</td>
-<td>5</td>
+<td>6</td>
 <td>2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Light Blue</td>
-<td>5</td>
-<td>4.5</td>
+<td>6</td>
+<td>6</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Gray</td>
-<td>5</td>
-<td>3</td>
+<td>6</td>
+<td>4</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Navy</td>
-<td>5</td>
-<td>0.5</td>
+<td>6</td>
+<td>0</td>
 </tr>
 </tbody>
 </table></div></div>
@@ -628,7 +628,7 @@
 <!-- /module text --><!-- module text -->
 <div class="module module-text tb_n2gl856   " data-lazy="1">
         <div class="tb_text_wrap">
-    <p style="text-align: center;">Saturday, April 15, 2023</p>    </div>
+    <p style="text-align: center;">Saturday, October 11, 2025</p>    </div>
 </div>
 <!-- /module text -->	        </div>
 	    	</div>
